# mcp_reverse_engineering

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  Dockerfile  README.md  SPEC.md  docker-compose.yml  mcp.json  pyproject.toml  server.json  tools_config.yaml
.github/workflows/: mcp-publish.yml  publish-mcp.yml
examples/: firmware.yaml  full.yaml  minimal.yaml
mcp_reverse_engineering/: __init__.py  cli.py
mcp_reverse_engineering/core/: __init__.py  config.py  engine.py
mcp_reverse_engineering/knowledge_base/: __init__.py  documentation.py
mcp_reverse_engineering/sandbox/: __init__.py  execution.py
mcp_reverse_engineering/tools/: __init__.py  base.py  binary_tools.py  file_tools.py  firmware_tools.py  network_tools.py
mcp_reverse_engineering/utils/: __init__.py
src/mcp_reverse_engineering/: __init__.py  __main__.py  cli.py  server.py
src/mcp_reverse_engineering/core/: __init__.py  config.py  engine.py
src/mcp_reverse_engineering/knowledge_base/: __init__.py  documentation.py
src/mcp_reverse_engineering/sandbox/: __init__.py  execution.py
src/mcp_reverse_engineering/tools/: __init__.py  base.py  binary_tools.py  file_tools.py  firmware_tools.py  network_tools.py
src/mcp_reverse_engineering/utils/: __init__.py
tests/: __init__.py  conftest.py  test_engine.py  test_sandbox.py
