[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-reverse-engineering"
version = "0.1.3"
description = "A sandboxed MCP tool for reverse engineering with multiple tool integrations"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Darío Clavijo", email = "clavijodario@gmail.com"}
]
dependencies = [
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "hatch",
    "pip-api",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "hypothesis",
]
lint = [
    "ruff",
    "mypy",
]
all = ["mcp-reverse-engineering[dev,test,lint]"]

[project.scripts]
mcp-re = "mcp_reverse_engineering.__main__:main"

[project.urls]
Homepage = "https://github.com/daedalus/mcp_reverse_engineering"
Repository = "https://github.com/daedalus/mcp_reverse_engineering"
Issues = "https://github.com/daedalus/mcp_reverse_engineering/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_reverse_engineering"]

[tool.hatch.build.targets.sdist]
include = ["src/mcp_reverse_engineering"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-fail-under=80"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude = ["tests/*", "*/__init__.py"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages]
find = {}